--- a/css/styles-main.css
+++ b/css/styles-main.css
@@ -17,8 +17,9 @@
 }
 
 body {
-  margin: 3% 10% 0 10%;
+  margin: 1% 5% 0 5%;
   background-image: url(../assets/images/fondo-espacio-estrellas-ilustracion-vectorial_97886-319.webp);
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7); /* Mejora la legibilidad */
 }
 
 #sistema_solar {
@@ -116,13 +117,14 @@ nav ul li {
 }
 
 #btnMenu {
-  background-color: black;
-  padding: 20px;
-  display: block;
-  cursor: pointer;
-  font-size: 1.5rem;
-  width: 100%;
+  background-color: #ff4500;
+  border: none;
+  padding: 15px 20px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
   color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 main {
